@@ -1698,10 +1698,10 @@ static php_iconv_err_t _php_iconv_mime_decode(smart_str *pretval, const char *st
 							if ((mode & PHP_ICONV_MIME_DECODE_CONTINUE_ON_ERROR)) {
 								/* pass the entire chunk through the converter */
 								err = _php_iconv_appendl(pretval, encoded_word, (size_t)(p1 - encoded_word), cd_pl); 
-								if (err != PHP_ICONV_ERR_SUCCESS) {
-									goto out;
-								}
 								encoded_word = NULL;
+								if (err != PHP_ICONV_ERR_SUCCESS) {
+									break;
+								}
 							} else {
 								goto out;
 							}
